Create sequelize migrations
