# routes/User.js
@@ -17,31 +17,6 @@ router.put('/', verifyJWT, async (req, res) => {
     }
 })
 
-
-router.put('/approve/:id', verifyJWT, async (req, res) => {
-    try {
-        const result = await userService.approveUserById({ ...req.params, token: req.cookies['x-access-token'] });
-        res.status(200).json(result);
-    } catch (err) {
-        console.log(err);
-        (err.code) ?
-            res.status(500).json({ message: "Server Internal Error." }) :
-            res.status(500).json({ message: err.message });
-    }
-})
-
-router.put('/approve', verifyJWT, async (req, res) => {
-    try {
-        const result = await userService.approveMultipleUsersById({ ...req.body, token: req.cookies['x-access-token'] });
-        res.status(200).json(result);
-    } catch (err) {
-        console.log(err);
-        (err.code) ?
-            res.status(500).json({ message: "Server Internal Error." }) :
-            res.status(500).json({ message: err.message });
-    }
-})
-
 router.delete('/:id/', verifyJWT, async (req, res) => {
     try {
         const result = await userService.deleteUserById({ ...req.params, token: req.cookies['x-access-token'] });
@@ -54,7 +29,7 @@ router.delete('/:id/', verifyJWT, async (req, res) => {
     }
 })
 
-router.get('/:status?', verifyJWT, async (req, res) => {
+router.get('/:status', verifyJWT, async (req, res) => {
     try {
         const result = await userService.getListOfUsers({ ...req.params, token: req.cookies['x-access-token'] });
         res.status(200).json(result);
@@ -66,5 +41,18 @@ router.get('/:status?', verifyJWT, async (req, res) => {
     }
 })
 
+router.get('/', verifyJWT, async (req, res) => {
+    try {
+        const result = await userService.getUserById({
+            id: req.userId, token: req.cookies['x-access-token']
+        });
+        res.status(200).json(result);
+    } catch (err) {
+        console.log(err);
+        (err.code) ?
+            res.status(500).json({ message: "Server Internal Error." }) :
+            res.status(500).json({ message: err.message });
+    }
+})
 
 module.exports = router;
